--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,7 +88,7 @@
          <li class="review__item">высокопроизводительным</li>
          <li class="review__item">надежным</li>
        </ul>
-    </p>
+       </p>
       <p class="review__about">Работа на различных платформах гетерогенных сетей отбрасывает традиционную схему распределения ПО, версий ПО,
       модификации ПО, объединения ПО и т.д. Для решения проблем гетерогенных сред язык должен быть
       <ul class="review__list">
@@ -96,7 +96,7 @@
         <li class="review__item">переносимым</li>
         <li class="review__item">динамически подстраиваемым</li>
       </ul>
-    </p>
+        </p>
       <p class="review__about">Более подробно рассмотрим перечисленные характеристики Java.
         <ol class="review__list">
           <li class="review__item"> <i>Простота.</i> Простота языка входит в ключевые характеристики Java: разработчик не должен длительное время изучать язык,
@@ -124,7 +124,7 @@
           исключает целый класс ошибок, так часто возникающих у программистов на С и С++. Программы на Java можно писать, будучи
           уверенным в том, что машина не "повиснет" из-за ошибок при работе с динамически выделенной памятью.</li>
         </ol>
-      </p>
+         </p>
     </div>
     <a href="#" class="to-top">
       <img src="img/arrow.jpg" alt="Наверх">
